--- a/index.html
+++ b/index.html
@@ -4,17 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ThingSpeak Data Dashboard</title>
-    <link rel="stylesheet" href="css/style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        .dashboard {
+            margin-top: 50px;
+        }
+        .data-item {
+            margin: 20px 0;
+            font-size: 2em;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1>ThingSpeak Data Dashboard</h1>
-        <div id="data">
-            <p>Temperature: <span id="temperature">Loading...</span> °C</p>
-            <p>Humidity: <span id="humidity">Loading...</span> %</p>
-        </div>
+    <div class="dashboard">
+        <div class="data-item">Temperature: <span id="temperature">Loading...</span> °C</div>
+        <div class="data-item">Humidity: <span id="humidity">Loading...</span> %</div>
     </div>
 
-    <script src="js/script.js"></script>
+    <script>
+        // Replace with your ThingSpeak channel ID and API key
+        const channelID = 'YOUR_CHANNEL_ID';
+        const readAPIKey = 'YOUR_READ_API_KEY';
+
+        // Function to fetch data from ThingSpeak
+        function fetchData() {
+            fetch(`https://api.thingspeak.com/channels/165462/feeds.json?api_key=JQ8377Q9Z7F3QEAJ&results=1`)
+                .then(response => response.json())
+                .then(data => {
+                    const latestEntry = data.feeds[0];
+                    document.getElementById('temperature').innerText = latestEntry.field3;
+                    document.getElementById('humidity').innerText = latestEntry.field4;
+                })
+                .catch(error => {
+                    console.error('Error fetching data:', error);
+                });
+        }
+
+        // Fetch data every 15 seconds
+        setInterval(fetchData, 15000);
+        fetchData(); // Initial fetch
+    </script>
 </body>
 </html>
